# chinook

./: .gitignore  Readme.md  chinook.session.sql  docker-compose.yml  pyproject.toml  tree.txt
chinook/: asgi.py  settings.py  urls.py  wsgi.py
core-api/: Dockerfile  pyproject.toml
core-api/chinook/: settings.py  urls.py
core-api/common/: pagination.py
core-api/music/: admin.py
core-api/reports/: serializers.py  urls.py  views.py
core-api/staff/: serializers.py
db/: chinook_dump.sql
music/: models.py  serializers.py  urls.py  views.py
sales/: models.py  serializers.py  urls.py  views.py
staff/: models.py  urls.py  views.py
